# Personality-detector

./: Dockerfile  README.md  docker-compose.yml  main.py  personality_model.pkl  personality_predictor.ipynb  predicted_personality.csv  pyproject.toml  streamlit_UI.py
deployments/: buildspec.yml
streamlit_app/: routes.py  streamlit_UI.py
