[project]
name = "project-personality-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Gayaani Parameswaran",email = "none@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "streamlit (>=1.46.0,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
